--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -69,7 +69,7 @@
     [Parameter] public long SeasonId { get; set; }
 
     List<Incident> Incidents;
-    List<PartsUsageModel> PartsPerDriver;
+    List<PartsUsedByDriver> PartsPerDriver;
 
     protected override async Task OnInitializedAsync()
     {
