--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -29,6 +29,7 @@ else
                     <HeaderContent>
                         <MudTh>Grid</MudTh>
                         <MudTh>Name</MudTh>
+                        <MudTh>Addendum</MudTh>
                         <MudTh>Strategy</MudTh>
                     </HeaderContent>
                     <RowTemplate>
@@ -42,10 +43,18 @@ else
                                 <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Grid</MudText>
                             }
                         </MudTd>
-                        <MudTd>@context.FullName</MudTd>
+                        <MudTd>
+                            <MudText>@context.FullName</MudText>
+                        </MudTd>
+                        <MudTd>
+                            @if (context.Penalty.HasValue)
+                            {
+                                <MudText>+@(context.Penalty.Value)</MudText>
+                            }
+                        </MudTd>
                         <MudTd>
                             <MudLink OnClick="@(async () => await PickStrategy(context.ResultId))">
-                                <MudStack Spacing="2" Row="true">
+                                <MudStack Row="true" Spacing="2">
                                     @foreach (var tyreElem in context.Strategy.StrategyTyres)
                                     {
                                         <span class="tyre" style="border-color:@(tyreElem.Tyre.Colour)">
@@ -63,7 +72,7 @@ else
         <MudItem xs="9">
             <MudGrid>
                 <MudItem xs="6">
-                    <MudPaper Class="pa-4">
+                    <MudPaper Class="pa-4 mud-height-full">
                         <MudStack AlignItems="AlignItems.Center">
                             <MudText Typo="Typo.h4">@Model.Race.Name</MudText>
                             <MudStack Row="true" AlignItems="AlignItems.Center">
@@ -86,9 +95,9 @@ else
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <MudPaper Class="pa-4">
+                    <MudPaper Class="pa-4 mud-height-full">
                         <MudText Typo="Typo.h5">Track information</MudText>
-                        <MudText Typo="Typo.body2" Color="Color.Error">This section is pretty ugly, innit?</MudText>
+                        <MudText Typo="Typo.body2" Color="Color.Error">This section is pretty ugly, mate</MudText>
                         <MudList>
                             <MudListItem>
                                 Country:
@@ -99,19 +108,19 @@ else
                             </MudListItem>
                             <MudListItem>
                                 Laps: @(NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length))
-                                </MudListItem>
+                            </MudListItem>
                             <MudListItem>
-                                Aero mod: @Model.Race.Track.AeroMod
-                                </MudListItem>
+                                <MudText>Aero mod: @Model.Race.Track.AeroMod</MudText>
+                            </MudListItem>
                             <MudListItem>
                                 Chassis mod: @Model.Race.Track.ChassisMod
-                                </MudListItem>
+                            </MudListItem>
                             <MudListItem>
                                 Power mod: @Model.Race.Track.PowerMod
-                                </MudListItem>
+                            </MudListItem>
                             <MudListItem>
                                 Qualy mod: @Model.Race.Track.QualifyingMod
-                                </MudListItem>
+                            </MudListItem>
                             <MudListItem>
                                 Weather: @Model.Race.Climate.Terminology
                             </MudListItem>
@@ -119,34 +128,8 @@ else
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <MudPaper Class="pa-4">
-                        <MudText Typo="Typo.h5">Penalties</MudText>
-                        @if (Model.AnyPenalties)
-                        {
-                            <MudSimpleTable Dense="true">
-                                <thead>
-                                    <tr>
-                                        <th>Driver</th>
-                                        <th>Reason</th>
-                                        <th>Penalty</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var penalizedDriver in Model.RaceWeekDrivers.Where(e => e.Penalty.HasValue))
-                                    {
-                                        <tr>
-                                            <td>@penalizedDriver.FullName</td>
-                                            <td>@penalizedDriver.Reasons</td>
-                                            <td>+@(penalizedDriver.Penalty)</td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </MudSimpleTable>
-                        }
-                        else
-                        {
-                            <MudText>No penalties for this race</MudText>
-                        }
+                    <MudPaper Class="pa-4 mud-height-full">
+                        
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
