tested emblems out a bit

--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -1,4 +1,5 @@
-﻿<h3>Credits</h3>
+﻿@page "/credits"
+<h3>Credits</h3>
 <p>sokje for human being generator-data and f1 graphics generator</p>
 <p>tabler icons for icons</p>
 <p>MudBlazor for the component framework</p>
