--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -10,7 +10,7 @@
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-16 px-8">
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
+            <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
                 <MudText Typo="Typo.overline">Config</MudText>
                 <MudText Typo="Typo.body2">Fatal odds: @_config.Value.FatalityChance</MudText>
                 <MudText Typo="Typo.body2">Dsq odds: @_config.Value.DisqualifyChance</MudText>
@@ -20,12 +20,12 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
+            <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
                 <MudText Typo="Typo.h2">SimTECH</MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
+            <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
                 <MudText Typo="Typo.overline">
                     Config
                 </MudText>
@@ -33,12 +33,21 @@
                 <MudText Typo="Typo.body2">Team status car mod: @_config.Value.CarDriverStatusModifier</MudText>
                 <MudText Typo="Typo.body2">Use personal numbers: @_config.Value.PersonalNumbers</MudText>
                 <MudText Typo="Typo.body2">Calc distance ref: @_config.Value.CalculationDistance</MudText>
+                <MudStack Row="true">
+                    <MudText Typo="Typo.h6">Custom Icon Cycler</MudText>
+                    <MudSpacer />
+                    <MudButton OnClick="CycleCustomIcon">Cycle</MudButton>
+                </MudStack>
+                <MudIcon Icon="@activeCustomIcon" />
+                <MudIcon Icon="@activeCustomIcon" Style="color:green" />
+                <MudIcon Icon="@activeCustomIcon" Color="Color.Secondary" Size="Size.Small" />
+                <MudIcon Icon="@activeCustomIcon" Color="Color.Primary" Size="Size.Large" />
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                    <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
                         <MudText Typo="Typo.h5">Examples</MudText>
                         <div>
                             <!-- Local storage value -->
@@ -47,19 +56,22 @@
                             </MudButton>
                             <MudText>@exampleStore</MudText>
                         </div>
+                        <MudText Typo="Typo.overline">Custom emblems</MudText>
                         <MudStack Row="true">
-                            <MudText Typo="Typo.h6">Custom Icon Cycler</MudText>
-                            <MudSpacer />
-                            <MudButton OnClick="CycleCustomIcon">Cycle</MudButton>
+                            <span style="color: #49f2e7; fill: #bf34fa">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-playstation-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="inherit" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M12 21a9 9 0 0 0 9 -9a9 9 0 0 0 -9 -9a9 9 0 0 0 -9 9a9 9 0 0 0 9 9z"></path>
+                                    <path d="M8.5 8.5l7 7"></path>
+                                    <path d="M8.5 15.5l7 -7"></path>
+                                </svg>
+                            </span>
+                            <Emblem Icon="@IconCollection.Polygon" Colour="#49f2e7" Accent="#bf34fa" />
                         </MudStack>
-                        <MudIcon Icon="@activeCustomIcon" />
-                        <MudIcon Icon="@activeCustomIcon" Style="color:green" />
-                        <MudIcon Icon="@activeCustomIcon" Color="Color.Secondary" Size="Size.Small" />
-                        <MudIcon Icon="@activeCustomIcon" Color="Color.Primary" Size="Size.Large" />
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px">
+                    <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
                         <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle("red", "yellow"))">01</MudText>
                         <MudText Typo="Typo.h6" Style="color:red; border: 1px solid yellow">02</MudText>
 
@@ -76,14 +88,6 @@
                                         <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle("red", "yellow"))">01</MudText>
                                     </td>
                                     <td>2/5</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="pa-1" style="border: 1px solid yellow; border-radius: 5px">
-                                            <MudText Typo="Typo.h6" Style="color:red">02</MudText>
-                                        </span>
-                                    </td>
-                                    <td>0/5</td>
                                 </tr>
                                 <tr>
                                     <td>
