--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -1,4 +1,6 @@
 ﻿@page "/credits"
+@inject BreadcrumbProvider _bread
+
 <h3>Credits</h3>
 <p>sokje for human being generator-data and f1 graphics generator</p>
 <p>tabler icons for icons</p>
@@ -15,5 +17,12 @@
 </MudGrid>
 
 @code {
-
+    protected override void OnInitialized()
+    {
+        _bread.Reset();
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: ""),
+        });
+    }
 }
