--- a/SimTECH/SimTECH/Pages/Season/Development.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development.razor
@@ -3,111 +3,119 @@
 @inject SeasonService SeasonService
 @inject ISnackbar Snackbar
 
-@if (DevelopedEntrants != null)
-{
-    <MudPaper>
-        <MudStack Row="true" Class="px-4 py-2">
-            <MudText Typo="Typo.h4">Development</MudText>
-
-            <MudSpacer />
-
-            <MudButtonGroup Variant="Variant.Filled">
-                @if (_ranDevelop)
-                {
-                    <MudButton StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" OnClick="SaveDevelopment">Save</MudButton>
-                }
-                <MudButton StartIcon="@Icons.Material.Filled.Recycling" Color="Color.Info" OnClick="RunDevelop">Run</MudButton>
-            </MudButtonGroup>
-        </MudStack>
-        <MudTable Items="@DevelopedEntrants" Dense="true">
-            <ToolBarContent>
-                <div class="mx-1 my-auto">
-                    <MudTooltip Text="For whom the development is run">
-                        <MudText Typo="Typo.subtitle1">Entrant</MudText>
-                    </MudTooltip>
-                    <MudChipSet SelectedChipChanged="EntrantChipChanged" Mandatory="true">
-                        <MudChip Color="Color.Primary" Value="Entrant.Driver" Default="true">Driver</MudChip>
-                        <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
-                        <MudChip Color="Color.Primary" Value="Entrant.Engine">Engine</MudChip>
-                    </MudChipSet>
-                </div>
-                
-                <div class="pa-1 mx-1">
-                    <MudTooltip Text="How the development ranges are determined">
-                        <MudText Typo="Typo.subtitle1">Type</MudText>
-                    </MudTooltip>
-                    <MudChipSet SelectedChipChanged="TypeChipChanged" Mandatory="true">
-                        <MudChip Color="Color.Secondary" Value="TypeDevelop.Range" Default="true">Range</MudChip>
-                        <MudChip Color="Color.Secondary" Value="TypeDevelop.Set">Set</MudChip>
-                        <MudChip Color="Color.Secondary" Value="TypeDevelop.Direct">Direct</MudChip>
-                    </MudChipSet>
-                </div>
-
-                <div class="pa-1 mx-1">
-                    <MudTooltip Text="Which aspect is going to be developed">
-                        <MudText Typo="Typo.subtitle1">Target</MudText>
-                    </MudTooltip>
-                    <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
-                        <MudChip Color="Color.Tertiary" Value="TargetDevelop.Main" Default="true">@_mainTypeName</MudChip>
-                        <MudChip Color="Color.Tertiary" Value="TargetDevelop.Reliability">Reliability</MudChip>
-                    </MudChipSet>
-                </div>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+    @if (DevelopedEntrants != null)
+    {
+        <MudPaper>
+            <MudStack Row="true" Class="px-4 py-2">
+                <MudText Typo="Typo.h4">Development</MudText>
 
                 <MudSpacer />
 
-                @if (_selectedType == TypeDevelop.Range)
-                {
-                    <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
-                    <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
-                }
-            </ToolBarContent>
-            <HeaderContent>
-                <MudTh>Name</MudTh>
-                @if (_optionalColTitle != null)
-                {
-                    <MudTh>@_optionalColTitle</MudTh>
-                }
-                <MudTh>Old</MudTh>
-                <MudTh>Change</MudTh>
-                <MudTh>New</MudTh>
-                <MudTh>Range</MudTh>
-            </HeaderContent>
-            <RowTemplate>
-                <MudTd>
-                    <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                        <MudText>@context.Name</MudText>
-                        <MudSpacer />
-                        @if (context.Nationality.HasValue)
-                        {
-                            <CountryFlag Code="@context.Nationality.Value" Size="FlagSize.Tiny" />
-                        }
-                    </MudStack>
-                </MudTd>
-                @if (_optionalColTitle != null)
-                {
+                <MudButtonGroup Variant="Variant.Filled">
+                    @if (_ranDevelop)
+                    {
+                        <MudButton StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" OnClick="SaveDevelopment">Save</MudButton>
+                    }
+                    <MudButton StartIcon="@Icons.Material.Filled.Recycling" Color="Color.Info" OnClick="RunDevelop">Run</MudButton>
+                </MudButtonGroup>
+            </MudStack>
+            <MudTable Items="@DevelopedEntrants" Dense="true">
+                <ToolBarContent>
+                    <div class="mx-1 my-auto">
+                        <MudTooltip Text="For whom the development is run">
+                            <MudText Typo="Typo.subtitle1">Entrant</MudText>
+                        </MudTooltip>
+                        <MudChipSet SelectedChipChanged="EntrantChipChanged" Mandatory="true">
+                            <MudChip Color="Color.Primary" Value="Entrant.Driver" Default="true">Driver</MudChip>
+                            <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
+                            <MudChip Color="Color.Primary" Value="Entrant.Engine">Engine</MudChip>
+                        </MudChipSet>
+                    </div>
+
+                    <div class="pa-1 mx-1">
+                        <MudTooltip Text="How the development ranges are determined">
+                            <MudText Typo="Typo.subtitle1">Type</MudText>
+                        </MudTooltip>
+                        <MudChipSet SelectedChipChanged="TypeChipChanged" Mandatory="true">
+                            <MudChip Color="Color.Secondary" Value="TypeDevelop.Range" Default="true">Range</MudChip>
+                            <MudChip Color="Color.Secondary" Value="TypeDevelop.Set">Set</MudChip>
+                            <MudChip Color="Color.Secondary" Value="TypeDevelop.Direct">Direct</MudChip>
+                        </MudChipSet>
+                    </div>
+
+                    <div class="pa-1 mx-1">
+                        <MudTooltip Text="Which aspect is going to be developed">
+                            <MudText Typo="Typo.subtitle1">Target</MudText>
+                        </MudTooltip>
+                        <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
+                            <MudChip Color="Color.Tertiary" Value="TargetDevelop.Main" Default="true">@_mainTypeName</MudChip>
+                            <MudChip Color="Color.Tertiary" Value="TargetDevelop.Reliability">Reliability</MudChip>
+                            @if (_activeEntrant == Entrant.Team)
+                            {
+                                <MudChip Color="Color.Tertiary" Value="TargetDevelop.Aero">Aero</MudChip>
+                                <MudChip Color="Color.Tertiary" Value="TargetDevelop.Chassis">Chassis</MudChip>
+                                <MudChip Color="Color.Tertiary" Value="TargetDevelop.Powertrain">Powertrain</MudChip>
+                            }
+                        </MudChipSet>
+                    </div>
+
+                    <MudSpacer />
+
+                    @if (_selectedType == TypeDevelop.Range)
+                    {
+                        <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
+                        <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
+                    }
+                </ToolBarContent>
+                <HeaderContent>
+                    <MudTh>Name</MudTh>
+                    @if (_optionalColTitle != null)
+                    {
+                        <MudTh>@_optionalColTitle</MudTh>
+                    }
+                    <MudTh>Old</MudTh>
+                    <MudTh>Change</MudTh>
+                    <MudTh>New</MudTh>
+                    <MudTh>Range</MudTh>
+                </HeaderContent>
+                <RowTemplate>
                     <MudTd>
-                        <MudText Typo="Typo.caption">@(context.Optional.HasValue ? context.Optional.Value : "?")</MudText>
+                        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                            <MudText>@context.Name</MudText>
+                            <MudSpacer />
+                            @if (context.Nationality.HasValue)
+                            {
+                                <CountryFlag Code="@context.Nationality.Value" Size="FlagSize.Tiny" />
+                            }
+                        </MudStack>
                     </MudTd>
-                }
-                <MudTd>
-                    <MudText Typo="Typo.caption">@context.Old</MudText>
-                </MudTd>
-                <MudTd>
-                    <MudText Typo="Typo.caption">@context.Change</MudText>
-                </MudTd>
-                <MudTd>
-                    <MudText Typo="Typo.caption">@context.New</MudText>
-                </MudTd>
-                <MudTd>
-                    <MudStack Row="true">
-                        <MudNumericField T="int" @bind-Value="context.Min" Label="Min" ReadOnly="_selectedType != TypeDevelop.Direct" Class="field-sm" />
-                        <MudNumericField T="int" @bind-Value="context.Max" Label="Max" ReadOnly="_selectedType != TypeDevelop.Direct" Class="field-sm" />
-                    </MudStack>
-                </MudTd>
-            </RowTemplate>
-        </MudTable>
-    </MudPaper>
-}
+                    @if (_optionalColTitle != null)
+                    {
+                        <MudTd>
+                            <MudText Typo="Typo.caption">@(context.Optional.HasValue ? context.Optional.Value : "?")</MudText>
+                            </MudTd>
+                    }
+                    <MudTd>
+                        <MudText Typo="Typo.caption">@context.Old</MudText>
+                    </MudTd>
+                    <MudTd>
+                        <MudText Typo="Typo.caption">@context.Change</MudText>
+                    </MudTd>
+                    <MudTd>
+                        <MudText Typo="Typo.caption">@context.New</MudText>
+                    </MudTd>
+                    <MudTd>
+                        <MudStack Row="true" Class="pa-0">
+                            <MudNumericField T="int" @bind-Value="context.Min" Label="Min" ReadOnly="@(_selectedType != TypeDevelop.Direct)" Class="field-sm" />
+                            <MudNumericField T="int" @bind-Value="context.Max" Label="Max" ReadOnly="@(_selectedType != TypeDevelop.Direct)" Class="field-sm" />
+                        </MudStack>
+                    </MudTd>
+                </RowTemplate>
+            </MudTable>
+        </MudPaper>
+    }
+</MudContainer>
 
 @code {
     [CascadingParameter] public Season Season { get; set; }
@@ -174,12 +182,36 @@
                 Name = e.Name,
                 Nationality = e.Team.Country,
                 Optional = null,
-                Old = _selectedTarget == TargetDevelop.Main ? e.BaseValue : e.Reliability,
+                Old = ReadOldTarget(e),
             })
             .ToList();
 
         _optionalColTitle = null;
     }
+
+    int ReadOldTarget(SeasonTeam team) => _selectedTarget switch
+    {
+        TargetDevelop.Main => team.BaseValue,
+        TargetDevelop.Reliability => team.Reliability,
+        TargetDevelop.Aero => team.Aero,
+        TargetDevelop.Chassis => team.Chassis,
+        TargetDevelop.Powertrain => team.Powertrain,
+        _ => throw new InvalidOperationException("Somehow neither of the 5 possible develops"),
+    };
+
+    /*switch (_selectedTarget)
+    {
+        case TargetDevelop.Main:
+            return team.BaseValue;
+        case TargetDevelop.Reliability:
+            return team.BaseValue;
+        case TargetDevelop.Aero:
+            return team.BaseValue;
+        case TargetDevelop.Chassis:
+            return team.BaseValue;
+        case TargetDevelop.Powertrain:
+            return team.BaseValue;
+    }*/
 
     void DevelopEngines()
     {
