--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -2,48 +2,54 @@
 @inject SeasonEntrantService EntrantService
 @inject IDialogService DialogService
 
-<MudDataGrid T="SeasonDriver" Items="@SeasonDriverEntrants" Dense="true" Loading="@_loading" Class="my-2">
-    <ToolBarContent>
-        <MudText Typo="Typo.h4">Drivers</MudText>
-        <MudSpacer />
-        <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterDriver">New</MudButton>
-    </ToolBarContent>
-    <Columns>
-        <HierarchyColumn T="SeasonDriver" />
-        <TemplateColumn T="SeasonDriver" Title="Name" SortBy="e => e.Driver.FirstName">
-            <CellTemplate>
-                <MudStack Row="true" AlignItems="AlignItems.Center">
-                    <MudText>@context.Item.Driver.FullName</MudText>
-                    <MudSpacer />
-                    <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
-                </MudStack>
-            </CellTemplate>
-        </TemplateColumn>
-        <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
-        <PropertyColumn Property="e => e.Skill" />
-        <PropertyColumn Property="e => e.Reliability" Title="Rel." />
-        <PropertyColumn Property="e => e.TeamRole" Title="Role" />
-        <TemplateColumn T="SeasonDriver" Title="Team">
-            <CellTemplate>
-                @if (context.Item.SeasonTeam == null)
-                {
-                    <MudText Typo="Typo.body2" Color="Color.Error">Dropped</MudText>
-                }
-                else
-                {
-                    <MudText Typo="Typo.body2">@context.Item.SeasonTeam.Name</MudText>
-                }
-            </CellTemplate>
-        </TemplateColumn>
-        <TemplateColumn T="SeasonDriver" Sortable="false">
-            <CellTemplate>
-                <MudButtonGroup>
-                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriverEntrant(context.Item))" />
-                </MudButtonGroup>
-            </CellTemplate>
-        </TemplateColumn>
-    </Columns>
-</MudDataGrid>
+<MudContainer>
+    <MudDataGrid T="SeasonDriver" Items="@SeasonDriverEntrants" Dense="true" Loading="@_loading" Class="my-2">
+        <ToolBarContent>
+            <MudText Typo="Typo.h4">Drivers</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterDriver">New</MudButton>
+        </ToolBarContent>
+        <Columns>
+            <TemplateColumn Sortable="false" Class="accent-cell">
+                <CellTemplate>
+                    <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Item.SeasonTeam.Colour))"></span>
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonDriver" Title="Name" SortBy="e => e.Driver.FirstName">
+                <CellTemplate>
+                    <MudStack Row="true" AlignItems="AlignItems.Center">
+                        <MudText>@context.Item.Driver.FullName</MudText>
+                        <MudSpacer />
+                        <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
+                    </MudStack>
+                </CellTemplate>
+            </TemplateColumn>
+            <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
+            <PropertyColumn Property="e => e.Skill" />
+            <PropertyColumn Property="e => e.Reliability" Title="Rel." />
+            <PropertyColumn Property="e => e.TeamRole" Title="Role" />
+            <TemplateColumn T="SeasonDriver" Title="Team">
+                <CellTemplate>
+                    @if (context.Item.SeasonTeam == null)
+                    {
+                        <MudText Typo="Typo.body2" Color="Color.Error">Dropped</MudText>
+                    }
+                    else
+                    {
+                        <MudText Typo="Typo.body2">@context.Item.SeasonTeam.Name</MudText>
+                    }
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonDriver" Sortable="false">
+                <CellTemplate>
+                    <MudButtonGroup>
+                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriverEntrant(context.Item))" />
+                    </MudButtonGroup>
+                </CellTemplate>
+            </TemplateColumn>
+        </Columns>
+    </MudDataGrid>
+</MudContainer>
 
 @code {
     [CascadingParameter] public Season Season { get; set; }
