--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -13,7 +13,7 @@
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                 <MudButton OnClick="GoToHumanGenerator">Generate</MudButton>
-                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddDriver">New</MudButton>
+                <MudButton OnClick="AddDriver">New</MudButton>
             </MudButtonGroup>
         </ToolBarContent>
         <Columns>
@@ -26,9 +26,11 @@
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Driver" Title="Racing in" Sortable="false">
+            <TemplateColumn T="Driver" Title="League" Sortable="false">
                 <CellTemplate>
-                    
+                    <MudText>
+                        @ReadActiveLeague(context.Item.Id)
+                    </MudText>
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Alive" />
@@ -59,7 +61,7 @@
     </MudDataGrid>
 </MudContainer>
 
-    @code {
+@code {
     private List<Driver> DriverData = new();
     private List<CurrentDriver> CurrentDrivers = new();
 
@@ -69,11 +71,10 @@
         DriverData = await DriverService.GetDrivers();
     }
 
-    string ReadActiveLeague(long driverId)
-    {
-        return CurrentDrivers.Find(e => e.DriverId == driverId)?.League ?? "None";
-    }
+    // Displayable helpers
+    string ReadActiveLeague(long driverId) => CurrentDrivers.Find(e => e.DriverId == driverId)?.League ?? "None";
 
+    // CRUD-actions
     async Task AddDriver() => await UpdateDriver(new Driver());
     async Task UpdateDriver(Driver item)
     {
@@ -93,8 +94,8 @@
             DriverData = await DriverService.GetDrivers();
         }
     }
-
     async Task DeleteDriver(Driver driver) => await DriverService.DeleteDriver(driver);
 
+    // Navigation links
     void GoToHumanGenerator() => _nav.NavigateTo("humanbeinggenerator");
 }
